finalizando suporte tecnologico e refatorando estrutura

--- a/template-tcc1/Makefile
+++ b/template-tcc1/Makefile
@@ -18,10 +18,8 @@ EDITAVEIS_DIR = editaveis
 EDITAVEIS_SOURCES = informacoes.tex errata.tex dedicatoria.tex \
 					agradecimentos.tex epigrafe.tex resumo.tex abstract.tex \
 					abreviaturas.tex simbolos.tex introducao.tex \
-					referencialteorico.tex consideracoes.tex textoepostexto.tex \
-					elementosdotexto.tex elementosdopostexto.tex \
+					referencialteorico.tex metodologia.tex proposta.tex \
 					apendices.tex anexos.tex
-
 EDITAVEIS_FILES = $(addprefix $(EDITAVEIS_DIR)/, $(EDITAVEIS_SOURCES))
 
 MAIN_FILE = tcc.tex
