--- a/appMina/pubspec.yaml
+++ b/appMina/pubspec.yaml
@@ -18,18 +18,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.1
-  syncfusion_flutter_gauges: ^18.2.48
+  intl: ^0.17.0
+  syncfusion_flutter_gauges: ^19.2.51
+  firebase_auth: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_signin_button: ^2.0.0
+  firebase_core: ^1.4.0
+  google_sign_in: ^5.0.7
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
