--- a/appMina/pubspec.yaml
+++ b/appMina/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_core: ^1.4.0
   google_sign_in: ^5.0.7
+  cloud_firestore: ^2.5.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
