--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -14,12 +14,14 @@
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/auth": "^14.3.0",
     "@react-native-google-signin/google-signin": "^7.0.4",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/stack": "^6.1.0",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.0",
     "react": "17.0.2",
     "react-native": "0.67.1",
+    "react-native-calendars": "^1.1277.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "styled-components": "^5.3.1"
