config tab navigation

--- a/MinaApp/android/app/build.gradle
+++ b/MinaApp/android/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services' // <- Add this line
-
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ] // Name of the font files you want to copy
+]
 import com.android.build.OutputFile
 
 /**
