--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -23,7 +23,10 @@
     "react-native": "0.67.1",
     "react-native-calendars": "^1.1277.0",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
