--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "0.67.1",
     "react-native-calendars": "^1.1277.0",
+    "react-native-date-picker": "^4.2.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "^3.3.2",
