--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -7,7 +7,8 @@
     "ios": "ENVFILE=.env npx react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
