--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -27,6 +27,7 @@
     "react-native-date-picker": "^4.2.0",
     "react-native-gesture-handler": "^2.3.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
