--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -32,6 +32,7 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.1"
   },
@@ -41,6 +42,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-simple-radio-button": "^2.7.2",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
