--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/app-distribution": "^14.7.0",
     "@react-native-firebase/auth": "^14.5.0",
     "@react-native-firebase/firestore": "^14.5.0",
     "@react-native-firebase/functions": "^14.7.0",
