--- a/MinaApp/package.json
+++ b/MinaApp/package.json
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-simple-radio-button": "^2.7.4",
